Initial modifying commit for gphotodeamon

--- a/config/php.ini
+++ b/config/php.ini
@@ -1,3 +1,8 @@
 [Date]
 date.timezone="UTC"
 expose_php= Off
+
+[Xdebug]
+zend_extension="xdebug.so"
+xdebug.remote_autorestart=1
+xdebug.remote_autostart=1```
