--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -38,8 +38,8 @@ http {
         tcp_nodelay on;
         absolute_redirect off;
 
-        root /var/www/html;
-        index index.php index.html;
+        root /var/www;
+        index index.php;
 
         location / {
             # First attempt to serve request as file, then
@@ -48,10 +48,10 @@ http {
         }
 
         # Redirect server error pages to the static page /50x.html
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /var/lib/nginx/html;
-        }
+        # error_page 500 502 503 504 /50x.html;
+        # location = /50x.html {
+        #     root /var/lib/nginx/html;
+        # }
 
         # Pass the PHP scripts to PHP-FPM listening on php-fpm.sock
         location ~ \.php$ {
