--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -35,10 +35,8 @@
 	"source=${localWorkspaceFolder}/config/fpm-pool.conf,target=/etc/php/8.1/fpm/pool.d/www.conf,type=bind,consistency=cached",
 	"source=${localWorkspaceFolder}/config/php.ini,target=/etc/php/8.1/conf.d/custom.ini,type=bind,consistency=cached",
 	"source=${localWorkspaceFolder}/config/supervisord.conf,target=/etc/supervisor/conf.d/supervisord.conf,type=bind,consistency=cached",
-	"source=${localWorkspaceFolder}/../GphotoDeamon/build/GphotoDeamon,target=/usr/bin/gphotodeamon,type=bind,consistency=consistent",
-
+	"source=/var/gphoto_daemon,target=/var/gphoto_daemon,type=bind,consistency=cached",
 ],
-	// Uncomment to connect as a non-root user if you've added one. See https://aka.ms/vscode-remote/containers/non-root.
+// Uncomment to connect as a non-root user if you've added one. See https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode"
 }
-gphto
