Gphtoto Config now creates gui

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,14 +13,15 @@
 		"vscode": {
 		  "extensions": [
 			"xdebug.php-debug",
-			"xdebug.php-pack"
+			"xdebug.php-pack",
+			"firefox-devtools.vscode-firefox-debug"
 		]
 		}
 	  },
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [80,8080],
-
+	// "forwardPorts": [80,8080],
+	"appPort": [ 80,8080 ],
 	// Uncomment the next line to run commands after the container is created - for example installing curl.
 	// "postCreateCommand": "apt-get update && apt-get install -y curl",
 	//	/usr/bin/supervisord -c /etc/supervisor/conf.d/supervisord.conf
